--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="8dp"
     android:paddingRight="8dp"
     android:paddingTop="8dp"
-    tools:context="nanddgroup.favoriteplaces.MainActivity">
+    tools:context="nanddgroup.favoriteplaces.presentation.Activity.MainActivity">
 
     <fragment xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
@@ -24,7 +24,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        android:id="@+id/coordinatorLayout">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -61,8 +62,8 @@
         android:id="@+id/bDT"
         android:layout_width="48dp"
         android:layout_height="48dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentTop="true"
         android:background="#86ffffff"
-        android:text="D.T." />
+        android:text="D.T."
+        android:layout_above="@+id/coordinatorLayout"
+        android:layout_alignParentEnd="true"/>
 </RelativeLayout>
